feat: product page logos

--- a/web/workspace/pages/on-demand.dust
+++ b/web/workspace/pages/on-demand.dust
@@ -6,7 +6,7 @@
 <h1><img src="/assets/img/logo-ondemand-white.png" class="block alignauto marg__bottom" height="45" alt="On demand"></h1>
 <p class="kilo hdr inline-block no-marg-i"><span class="txt--red block">Cloud computing.</span> Designed for developers.</p>
 <br>
-<p class="cf inline-block normal read txt--grey">Launching soon.</p>
+<p class="cf inline-block normal read txt--grey no-marg-i pad__top">Launching soon.</p>
 {/header}
 
 <div class="container pad__bottom--x2 marg__top alignc">
