--- a/web/workspace/frontend/sass/parts/lists.scss
+++ b/web/workspace/frontend/sass/parts/lists.scss
@@ -22,7 +22,7 @@
 	list-style: none;
 
 	li {
-		border-bottom: 1px solid #e8f0f7;
+		border-bottom: 1px solid $bdr-grey;
 		padding: 10px 0;
 
 		&:last-of-type {
@@ -58,7 +58,7 @@
 	li {
 		list-style: none;
 		padding: 0.5em 0;
-		border-bottom: 1px solid #e8f0f7;
+		border-bottom: 1px solid $bdr-grey;
 		background: url(/assets/img/tick.svg) no-repeat 0 50%;
 		background-size: auto 17px;
 		padding-left: 35px;
@@ -68,7 +68,7 @@
 			padding-left: 0;
 		}
 		a {
-			border-bottom: 1px solid #e8f0f7;
+			border-bottom: 1px solid $bdr-grey;
 
 			&:hover {
 				border-bottom-color: $green;
@@ -155,4 +155,14 @@
 	}
 }
 
-    
+.list--product {
+	list-style: none;
+	font-size: 17px;
+
+	li {
+		margin-bottom: 1px;
+	}
+	a {
+		border-bottom: 1px solid $bdr-grey;
+	}
+}
