--- a/web/workspace/frontend/sass/site/main.scss
+++ b/web/workspace/frontend/sass/site/main.scss
@@ -51,8 +51,8 @@ form {
 }
 
 .product-logo {
-    display: block;
-    height: 80px;
+	display: block;
+	height: 80px;
 }
 @media #{$break-small} {
 	.product-logo-full {
@@ -149,7 +149,7 @@ abbr {
 
 @keyframes scroll {
 	0% { background-position: 0 50%; }
-    100% { background-position: -1536px 50%; }
+	100% { background-position: -1536px 50%; }
 }
 
 
@@ -172,5 +172,106 @@ abbr {
 @media #{$break-small} {
 	.success__desc {
 		width: auto;
+	}
+}
+
+.shadow--top {
+  box-shadow: 0 4px 11px 0 rgba(0,0,0,.04) inset;
+}
+.container--wide {
+  max-width: 1150px;
+  margin-top: 20px;
+  padding-top: 20px;
+  padding-bottom: 40px;
+}
+.list--feat li {
+  border-bottom: none;
+  position: relative;
+  list-style: none;
+  padding: 0 0 15px 35px;
+}
+.list--feat svg,
+.list--feat img {
+  position: absolute;
+  left: 0; top: 4px;
+  width: 20px;
+}
+
+.product__gallery {
+  width: 140%;
+  position: absolute;
+  left: -15%;
+  height: 0;
+  padding-top: 80%;
+  margin-top: -40px;
+
+  @media #{$break-small} {
+   	margin-top: 20px;
+  }
+}
+.product__frame {
+  background: #fff;
+  border-radius: 6px;
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  overflow: hidden;
+  box-shadow: -6px 6px 21px rgba(0,0,0,0.16);
+}
+.product__frame img {
+  width: 100%;
+  height: auto;
+}
+.product__visuals {
+  height: 460px;
+  position: relative;
+  top: -40px;
+
+  @media #{$break-small} {
+  	height: 750px;
+  }
+}
+
+.list--products {
+  padding: 0 10px 55px;
+
+  @media #{$break-small} {
+	display: none;
+  }
+}
+.list--products li {
+  list-style: none;
+  position: relative;
+  left: 40px;
+  background: url(/assets/img/arrow.svg) no-repeat 60% 50%;
+}
+.list--products li:last-of-type {
+  background: none;
+}
+.list--products li img {
+  position: absolute;
+  left: -40px;  
+  width: 20px; height: auto;
+  margin-top: 7px;
+}
+
+.list--product {
+	list-style: none;
+	font-size: 17px;
+	position: relative;
+	z-index: 1;
+
+	@media #{$break-small} {
+		padding-bottom: 40px;
+	}
+
+	li {
+		margin-bottom: 1px;
+	}
+	a {
+		border-bottom: 1px solid $bdr-grey;
+	}
+	a:hover {
+		color: #000 !important;
+		border-bottom-color: #000 !important;
 	}
 }
