--- a/web/workspace/frontend/sass/site/main.scss
+++ b/web/workspace/frontend/sass/site/main.scss
@@ -210,7 +210,7 @@ abbr {
   }
 }
 .product__frame {
-  background: #fff;
+  background: #000;
   border-radius: 6px;
   position: absolute;
   top: 0; right: 0; bottom: 0; left: 0;
